--- a/client/src/Package/package.css
+++ b/client/src/Package/package.css
@@ -1,7 +1,7 @@
 .package-info{
     border: 1px solid gray;
-    padding: 5px;
-    margin: 5px;
+    /*padding: 5px;*/
+    /*margin: 5px;*/
     text-align: center;
 }
 .displaySelectedItems{
